--- a/about page html.html
+++ b/about page html.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>About city Hospital</h1>
-        <p>We care for you and your health, always!</p>
+         <p>We care for you and your health</p>
     </header>
     <nav>
         <a href="../city care hospital/city care home webpage.html">Home</a>
