--- a/about page html.html
+++ b/about page html.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>About city Hospital</h1>
+        <h1>City Hospital</h1>
          <p>We care for you and your health</p>
     </header>
     <nav>
