--- a/about page html.html
+++ b/about page html.html
@@ -19,6 +19,7 @@
     </nav>
     <main>
         <section>
+            <h1>About City Hospital</h1>
             <h2>Our Mission</h2>
             <p>At City Hospital, our mission is to provide exceptional help.</p>
             <table>
